# intentions

./: CLAUDE.md  LICENSE  README.md  biome.json  package.json  tsconfig.json
.changeset/: config.json
apps/website/: next.config.js  package.json
apps/website/app/: error.tsx  layout.tsx  page.tsx  providers.tsx
apps/website/components/: intentions-wrapper.tsx  model-select.tsx  navbar.tsx  primitives.ts
apps/website/components/demos/: code-block.tsx  complete-demo.tsx  demo-shell.tsx  explain-demo.tsx  rewrite-demo.tsx  summarize-demo.tsx
apps/website/config/: site.ts
apps/website/contexts/: provider-context.tsx
apps/website/styles/: globals.css
prompts/: competitors.json  llama3.2-1b.json  qwen3-0.6b.json
python/: README.md  promptlab.toml  promptlab.toml.example  pyproject.toml
python/promptlab/: __init__.py  cli.py  config.py  schemas.py  types.py
python/promptlab/adapters/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py
python/promptlab/benchmark/: __init__.py  runner.py
python/promptlab/benchmark/prompts/: __init__.py
python/promptlab/benchmark/winners/: __init__.py
python/promptlab/datasets/: __init__.py  base.py  paradetox.py  sentence_compression.py  wikitext.py  wordnet.py  xsum.py
python/promptlab/eval/: __init__.py  base.py  complete.py  explain.py  gates.py  metrics.py  rewrite.py  summarize.py
python/promptlab/optim/: __init__.py  adapter.py  candidates.py  runner.py
